--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "node-uuid": "1.4.1",
     "nodemailer": "0.6.0",
     "connect-mongo": "0.4.0",
-    "csv": "0.3.7"
+    "csv": "0.3.7",
+    "prompt": "0.2.12"
   }
 }
