--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "forever": "0.10.11",
     "fluent-ffmpeg": "1.6.0",
     "prompt": "0.2.12",
-    "mime": "1.2.11"
+    "mime": "1.2.11",
+    "pkgcloud": ""
   }
 }
