--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heynow",
+  "name": "currently13",
   "description": "againaaa",
   "version": "0.0.1",
   "private": true,
@@ -19,8 +19,16 @@
     "diff": "1.0.8",
     "forever": "0.10.11",
     "fluent-ffmpeg": "1.6.0",
-    "prompt": "0.2.12",
     "mime": "1.2.11",
-    "pkgcloud": ""
+    "pkgcloud": "",
+    "tmp": "0.0.23"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-cli": "~0.1.13",
+    "grunt-contrib-jshint": "~0.6.3",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-ssh": "^0.11.0"
   }
 }
