--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,6 @@
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-ssh": "^0.11.0"
+    "grunt-ssh": "~0.11.0"
   }
 }
