--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,8 @@
     "tmp": "0.0.23",
     "winston": "0.7.2",
     "winston-mongodb": "0.4.3",
-    "formidable": "1.0.14"
+    "formidable": "1.0.14",
+    "mailgun": "0.4.2"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
